<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rvir.mycloset.DodajKombinacijoActivity">

    <TextView
        android:id="@+id/tv_izberiKategorijo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sIzberiKategorijo"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner_kategorija"
        android:layout_width="205dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/tv_izberiKategorijo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_kombVrhnja"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sVrhnja"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_kategorija" />

    <TextView
        android:id="@+id/tv_kombTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sTop"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_vrhnje" />

    <TextView
        android:id="@+id/tv_kombBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/sBottom"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_top" />

    <ImageView
        android:id="@+id/img_vrhnje"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginEnd="172dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="172dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toEndOf="@+id/tv_kombVrhnja"
        app:layout_constraintTop_toBottomOf="@+id/spinner_kategorija"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/img_top"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/tv_kombTop"
        app:layout_constraintTop_toBottomOf="@+id/img_vrhnje"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/img_bottom"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_kombShrani"
        app:layout_constraintStart_toEndOf="@+id/tv_kombBottom"
        app:layout_constraintTop_toBottomOf="@+id/img_top"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/btn_kombVrhnja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:onClick="gumb_izberiVrhnje"
        android:text="@string/sIzberi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toEndOf="@+id/img_vrhnje"
        app:layout_constraintTop_toBottomOf="@+id/spinner_kategorija" />

    <Button
        android:id="@+id/btn_kombTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="84dp"
        android:onClick="gumb_izberiTop"
        android:text="@string/sIzberi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/img_top"
        app:layout_constraintTop_toBottomOf="@+id/btn_kombVrhnja" />

    <Button
        android:id="@+id/btn_kombBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="84dp"
        android:onClick="gumb_izberiBottom"
        android:text="@string/sIzberi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/img_bottom"
        app:layout_constraintTop_toBottomOf="@+id/btn_kombTop" />

    <Button
        android:id="@+id/btn_kombShrani"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sShrani"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_kombBottom"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
